--- a/docs/themes/default/styles.css
+++ b/docs/themes/default/styles.css
@@ -1493,7 +1493,6 @@ span.forum-paginator-active{font-weight:700;text-decoration:underline; height:2e
 /* Top navigation tabs / list */
 div#topnavlistcontainer {
 	/*background-image: url('images/pencil_bottom_ds.png'); */
-
 	height:1.6em;
 	margin-left:1em;
 	border-bottom:1px solid #cccccc;
@@ -1507,10 +1506,7 @@ ul#topnavlist {
 	margin-left: auto;
 	margin-bottom: -2px;
 	margin-top: -.3em;
-	height:1.7em;
-
-
-}
+ }
 
 ul#topnavlist li {
 
@@ -1541,7 +1537,6 @@ ul#topnavlist li a {
     /* The normal, unselected tabs. They are all links */
 	color: #555;
 	font-weight:bold;
-	height: 1.6em;
 	border-top:1px solid #ccc;
 	border-left:1px solid #ccc;
 	border-right:1px solid #ccc;
